--- a/ui-and-dom/dom_tree_nodes.html
+++ b/ui-and-dom/dom_tree_nodes.html
@@ -1,5 +1,3 @@
-
-
 <!-- 
 
 Given two identical DOM trees with root nodes X and Y, given a node target in X’s tree, find the equivalent node in Y’s tree (the node at the same depth and position in Y’s tree).
@@ -19,7 +17,39 @@ type Node = {
   parentElement: Element;
 };
  -->
+<script>
 
+  function findIdenticalNode(root1, root2, target) {
+    let counter1 = 0;
+    let counter2 = 0;
+    // BFS
+    const q = [root1];
+
+    while (q.length) {
+      const node = q.shift();
+      counter1 += 1;
+      if (node === target) {
+        break;
+      }
+      for (const el of node.children) {
+        q.push(el)
+      }
+    }
+
+    const q2 = [root2];
+    while (q2.length) {
+      const node = q2.shift();
+      counter2 += 1;
+      if (counter2 === counter1) {
+        return node;
+      }
+      for (const el of node.children) {
+        q2.push(el)
+      }
+    }
+    return false;
+  }
+</script>
 
 
 <!DOCTYPE html>
@@ -61,11 +91,9 @@ type Node = {
     const root1 = document.querySelector('.x');
     const root2 = document.querySelector('.y');
 
+    // Given two identical DOM trees with root nodes X and Y, given a node target in X’s tree, find the equivalent node in Y’s tree
     function findIdenticalNode(root1, root2, target) {
-      const targetInTree1 = traverse(root1, target)
-      if (!targetInTree1) {
-        return false;
-      }
+      let targetInTree1 = false;
       let counter1 = 0;
       let counter2 = 0;
       // BFS
@@ -75,6 +103,7 @@ type Node = {
         const node = q.shift();
         counter1 += 1;
         if (node === target) {
+          targetInTree1 = true;
           break;
         }
         for (const el of node.children) {
@@ -82,7 +111,9 @@ type Node = {
         }
       }
 
-      // if (!q.includes(target)) return false;
+      if (!targetInTree1) {
+        return false;
+      }
 
       const q2 = [root2];
 
@@ -98,6 +129,7 @@ type Node = {
       }
       return false;
     }
+    //
 
     const target = document.querySelector('.e');
     console.log(findIdenticalNode(root1, root2, target))
@@ -114,9 +146,7 @@ type Node = {
       resultP.style.borderRadius = '100%';
       resultP.style.minWidth = '2vw'
       resultP.style.width = '5vw'
-
       resultP.style.maxWidth = '7vw'
-
       resultP.style.textAlign = 'center'
       resultP.textContent = result ? result.classList[0] : 'false'
       section.append(resultP)
@@ -140,6 +170,155 @@ type Node = {
         }
       }
     }
+
+
+
+    // COPILOT DFS
+    function findIdenticalNode(root1, root2, target) {
+      // find the target node in the first tree and the path to it
+      const path = [];
+      const targetInTree1 = dfs(root1, target, path, path.length);
+      if (!targetInTree1) {
+        return false;
+      }
+
+      // use the same path to find the corresponding node in the second tree
+      let currentNode = root2;
+      for (let i = 0; i < path.length; i++) {
+        currentNode = currentNode.children[path[i]];
+      }
+      return currentNode;
+    }
+
+    function dfs(node, target, path, length) {
+      if (node === target) {
+        path.length = length;
+        return true;
+      }
+      for (const el of node.children) {
+        path.push(el.index);
+        const found = dfs(el, target, path, length);
+        if (found) {
+          return true;
+        }
+        path.pop();
+      }
+      return false;
+    }
+
+    // other BFS:
+    function findIdenticalNode(root1, root2, target) {
+      // find the target node in the first tree
+      let targetInTree1 = false;
+      let targetIndex = -1;
+      let level = 0;
+      // BFS
+      const q = [{ node: root1, index: -1 }];
+
+      while (q.length) {
+        const { node, index } = q.shift();
+        if (node === target) {
+          targetInTree1 = true;
+          targetIndex = index;
+          break;
+        }
+        for (let i = 0; i < node.children.length; i++) {
+          q.push({ node: node.children[i], index: i });
+        }
+      }
+
+      if (!targetInTree1) {
+        return false;
+      }
+
+      // find the corresponding node in the second tree
+      let level2 = 0;
+      const q2 = [{ node: root2, index: -1 }];
+
+      while (q2.length) {
+        const { node, index } = q2.shift();
+        if (level2 === level && index === targetIndex) {
+          return node;
+        }
+        for (let i = 0; i < node.children.length; i++) {
+          q2.push({ node: node.children[i], index: i });
+        }
+        level2++;
+      }
+      return false;
+    }
+
+    function repeat(root1, root2, target) {
+      let targetInTree1 = false;
+      let targetIndex = -1;
+      let level = 0;
+      const q = [{ node: root1, index: -1 }];
+
+      while (q.length) {
+        const { node, index } = q.shift(); // shift off the front
+        if (node === target) {
+          targetInTree1 = true;
+          targetIndex = index;
+          break;
+        }
+        for (let i = 0; i < node.children.length; i++) {
+          q.push({ node: node.children[i], index: i });
+        }
+      }
+      if (!targetInTree1) return false;
+      const q2 = [{ node: root2, index: -1 }];
+      while (q2.length) {
+        const { node, index } = q2.shift();
+        for (let j = 0; i < node.children.length; j++) {
+          q.push({ node: children[i], index: j });
+        }
+      }
+    }
+
+
+    // USE THIS
+    // a Breadth-First Search (BFS), nodes are traversed level by level from left to right (or in the order they appear in the children array). So if two trees are identical in structure 
+    //and the children of each node are listed in the same order, BFS will visit the nodes in the same order in both trees.
+    
+     // Given two identical DOM trees with root nodes X and Y, given a node target in X’s tree, find the equivalent node in Y’s tree
+     function findIdenticalNode(root1, root2, target) {
+      let targetInTree1 = false;
+      let counter1 = 0;
+      let counter2 = 0;
+      // BFS
+      const q = [root1];
+
+      while (q.length) {
+        const node = q.shift();
+        counter1 += 1;
+        if (node === target) {
+          targetInTree1 = true;
+          break;
+        }
+        for (const el of node.children) {
+          q.push(el)
+        }
+      }
+
+      if (!targetInTree1) {
+        return false;
+      }
+
+      const q2 = [root2];
+
+      while (q2.length) {
+        const node = q2.shift();
+        counter2 += 1;
+        if (counter2 === counter1) {
+          return node;
+        }
+        for (const el of node.children) {
+          q2.push(el)
+        }
+      }
+      return false;
+    }
+    //
   </script>
 
 </body>
